Fixed issue with white space - had forgotten to write px after a size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ header  {
     font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
-    margin-top: 20;
+    margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
 }
